# PunkVM

./: .gitignore  Cargo.toml  Makefile  README.md  Roadmap.md  readme.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
benches/: cache_systeme_l1_l2_benchmarks.rs  simd_fpu_benchmarks.rs  simd_simd_vpu_benchmarks.rs
schema/: alu-detailed-design.mermaid  bytecode-pipeline-flow.mermaid  hybrid-arch-diagram.mermaid  punkvm-alu-architecture.mermaid
src/: lib.rs  main.rs
src/alu/: agu.rs  alu.rs  fpu.rs  mod.rs  v_alu.rs
src/bytecode/: decode_errors.rs  files.rs  format.rs  instructions.rs  mod.rs  opcodes.rs  simds.rs
src/debug/: mod.rs
src/examples/: branch_debug.rs  create_bytecode.rs  disassemble.rs  mod.rs
src/pipeline/: decode.rs  execute.rs  fetch.rs  forward.rs  hazard.rs  memory.rs  mod.rs  parallel.rs  ras.rs  writeback.rs
src/pvm/: Roadmap.md  branch_perceptor.rs  branch_predictor.rs  buffers.rs  cache_configs.rs  cache_stats.rs  caches.rs  executions.rs  forwardings.rs  hazards.rs  instructions.rs  memorys.rs  metrics.rs  mod.rs  opcode  optimizings.rs  pipeline_errors.rs  pipelines.rs  registers.rs  stacks.rs  vm.rs  vm_errors.rs
src/tests/: mod.rs  tests.rs
visual/: dashboard_performance.tsx  dashboard_performance_2.tsx  dashboard_pipeline_performance_visual.tsx  dashboard_pipeline_progress.tsx  punkvm-comprehensive-dashboard.tsx  punkvm-comprehensive-dashboard_1.tsx  punkvm-performance-dashboard.tsx  visu_metrics.tsx  visu_metrics_2.tsx  visu_metrics_3.tsx
