[package]
name = "PunkVM"
version = "0.1.0"
edition = "2021"



[dependencies]
rand = "0.9.0"
chrono = "0.4.39"

matches = "0.1.10"
tempfile = "3.17.1"







[dev-dependencies]
rand = "0.9.0"


#[profile.dev]
#overflow-checks = true
#
#
#
#[build]
#rustflags = ["-C", "link-args=-Wl,--stack,4194304"] # 4MB stack size


#[[bin]]
#name = "punkVM"
#path = "src/main.rs"
#
#
#[lib]
#name = "punk_vm"
#path = "src/lib.rs"

#[[test]]
#name = "tests"
#path = "tests/tests.rs"